<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NetXMS Agent</string>
	<string name="exit">Disconnect &amp; Exit</string>
	<string name="set">Set</string>
	<string name="cancel">Cancel</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="unmanage">Unmanage</string>
	<string name="manage">Manage</string>
	<string name="version">Version: %1$s (library %2$s, build %3$s)</string>
	<string name="reconnect">Reconnect</string>
	<string name="tools">Tools</string>
	<string name="confirm_tool_execution">Confirm execution</string>
					
	<string name="progress_gathering_data">Gathering data&#8230;</string>
	<string name="progress_processing_data">Processing data&#8230;</string>
				
	<string name="dashboard_title">Dashboards</string>
		
	<string name="main_title">Home</string>
	<string name="home">Home</string>
	<string name="home_screen_alarms">Alarms</string>
	<string name="home_screen_dashboards">Dashboards</string>
	<string name="home_screen_nodes">Nodes</string>
	<string name="home_screen_graphs">Graphics</string>
	<string name="home_screen_macaddress">MAC address</string>
			
    <string name="settings">Settings</string>
	<string name="pref_encrypt_summary_disabled">Do not use encryption</string>
    <string name="pref_encrypt_summary_enabled">Use encryption</string>
    <string name="pref_encrypt">Encrypt connection</string>
    <string name="pref_password_summary">NetXMS password</string>
    <string name="pref_password">Password</string>
    <string name="pref_login_summary">NetXMS login name</string>
    <string name="pref_login">User name</string>
    <string name="pref_server_summary">Name or address of NetXMS server</string>
    <string name="pref_server">Server</string>
    <string name="pref_port_summary">Port of NetXMS server</string>
    <string name="pref_port">Port</string>
    <string name="pref_global">Global settings</string>
    <string name="pref_connection">Connection</string>
    <string name="pref_parameters">Parameters</string>
    <string name="pref_scheduler">Scheduler</string>
    <string name="pref_scheduler_enable">Enable scheduler</string>
    <string name="pref_scheduler_enabled">Scheduler is enabled</string>
    <string name="pref_scheduler_disabled">Scheduler is disabled</string>
    <string name="pref_scheduler_daily_enable">Enable scheduler</string>
    <string name="pref_scheduler_daily_enabled">Daily scheduler is enabled</string>
    <string name="pref_scheduler_daily_disabled">Daily scheduler is disabled</string>
    <string name="pref_scheduler_daily_on">Daily activation on</string>
	<string name="pref_scheduler_daily_off">Daily activation off</string>
	<string name="pref_scheduler_activation_interval">Frequency (min)</string>
	<string name="pref_scheduler_activation_interval_summary">How often connection should be established</string>
	<string name="pref_scheduler_activation_duration">Duration (min)</string>
	<string name="pref_scheduler_activation_duration_summary">For how much it should be kept on</string>
	<string name="pref_global_autostart">Auto start on boot</string>
	<string name="pref_global_autostart_enabled">Auto start service on boot</string>
	<string name="pref_global_autostart_disabled">Do not auto start service on boot</string>
	<string name="pref_notifications">Notifications</string>
	<string name="pref_status">Connection status</string>
	<string name="pref_alarms">Alarms</string>
	<string name="pref_alarm_sound">Alarm sound by severity</string>
	<string name="pref_alarm_sound_normal">Normal alarm sound</string>
	<string name="pref_alarm_sound_warning">Warning alarm sound</string>
	<string name="pref_alarm_sound_minor">Minor alarm sound</string>
	<string name="pref_alarm_sound_major">Major alarm sound</string>
	<string name="pref_alarm_sound_critical">Critical alarm sound</string>
	<string name="pref_global_notification_toast">Toast notification</string>
	<string name="pref_global_notification_toast_enabled">Toast notification enabled</string>
	<string name="pref_global_notification_toast_disabled">Toast notification disabled</string>
	<string name="pref_global_notification_icon">Icon notification</string>
	<string name="pref_global_notification_icon_enabled">Icon notification in status bar enabled</string>
	<string name="pref_global_notification_icon_disabled">Icon notification in status bar disabled</string>
	<string name="pref_global_notification_status">Notification behaviour</string>
	<string name="pref_global_notification_alarm">Alarm notification</string>
	<string name="pref_global_notification_alarm_enabled">Alarm notification in status bar enabled</string>
	<string name="pref_global_notification_alarm_disabled">Alarm notification in status bar disabled</string>
	<string name="pref_interface">Interface</string>
	<string name="pref_multipliers">Multipliers</string>
	<string name="pref_multiplier_title">Choose multiplier</string>

	<string name="notification_title">NetXMS</string>
	<string name="notify_started">NetXMS agent started</string>
	<string name="notify_disconnected">Disconnected from server</string>
	<string name="notify_connected">Connected to server (pushing data)</string>
	<string name="notify_connecting">Connecting to server&#8230;</string>
	<string name="notify_connection_failed">Connection failed: %1$s</string>
	<string name="notify_no_connection">Data connection not available!"</string>
	<string name="notify_action_exec_fail">Cannot execute action: %1$s</string>
	<string name="notify_action_exec_success">Action executed successfully</string>
	<string name="notify_service_obj_sync_success">Objects synchronized</string>
	<string name="notify_service_obj_sync_fail">Failed to synchronize objects with server.</string>
	<string name="notify_next_connection_schedule">(next connection scheduled for %1$s)</string>

	<string name="status_normal">Normal</string>
	<string name="status_warning">Warning</string>
	<string name="status_minor">Minor</string>
	<string name="status_major">Major</string>
	<string name="status_critical">Critical</string>
	<string name="status_unmanaged">Unmanaged</string>
	<string name="status_unknown">Unknown</string>
	<string name="status_disabled">Disabled</string>
	<string name="status_testing">Testing</string>

	<string name="view_alarms">View alarms</string>
	<string name="alarm_acknowledge">Acknowledge</string>
	<string name="alarm_sticky_acknowledge">Sticky acknowledge</string>
	<string name="alarm_resolve">Resolve</string>
	<string name="alarm_terminate">Terminate</string>
	<string name="alarm_viewlastvalues">View last values</string>
	<string name="alarm_selectall">Select All</string>
	<string name="alarm_unselectall">Unselect All</string>
	<string name="alarms_title">Alarms</string>

	<string name="nodes_title">Nodes</string>
	<string name="node_unknown">&lt;Unknown&gt;</string>
	<string name="node_info_last_values">Last values</string>
	<string name="node_info_overview">Overview</string>
	<string name="node_info_alarms">Alarms</string>
	<string name="node_info_interfaces">Interfaces</string>
	
	<string name="overview_id">ID</string>
	<string name="overview_guid">GUID</string>
	<string name="overview_class">Class</string>
	<string name="overview_status">Status</string>
	<string name="overview_zone_id">Zone ID</string>
	<string name="overview_primary_hostname">Primary Host Name</string>
	<string name="overview_primary_ip">Primary IP</string>
	<string name="overview_system_description">System Description</string>
	<string name="overview_netxms_agent_version">NetXMS Agent Version</string>
	<string name="overview_platform_name">Platform Name</string>
	<string name="overview_snmp_sysname">SNMP sysName</string>
	<string name="overview_snmp_oid">SNMP OID</string>
	<string name="overview_bridge_base_address">Bridge Base Address</string>
	<string name="overview_driver">Driver</string>
	
	<string name="ts_fn_last">last</string>
	<string name="ts_fn_average">average</string>
	<string name="ts_fn_deviation">deviation</string>
	<string name="ts_fn_diff">diff</string>
	<string name="ts_fn_error">error</string>
	<string name="ts_fn_sum">sum</string>
	<string name="ts_op_less">&lt;</string>
	<string name="ts_op_lessequal">&lt;=</string>
	<string name="ts_op_equal">==</string>
	<string name="ts_op_greatherequal">&gt;=</string>
	<string name="ts_op_greather">&gt;</string>
	<string name="ts_op_different">!=</string>
	<string name="ts_op_like">like</string>
	<string name="ts_op_unlike">!like</string>
	<string name="ts_ok">OK</string>

	<string name="if_up">UP</string>
	<string name="if_down">DOWN</string>
	<string name="if_ignore">IGNORE</string>
	<string name="if_id">ID</string>
	<string name="if_name">Name</string>
	<string name="if_type">ifType</string>
	<string name="if_index">ifIndex</string>
	<string name="if_slot">Slot</string>
	<string name="if_port">Port</string>
	<string name="if_description">Description</string>
	<string name="if_mac_address">MAC Address</string>
	<string name="if_ip_address">IP Address</string>
	<string name="if_admin_state">Admin State</string>
	<string name="if_oper_state">Oper State</string>
	<string name="if_exp_state">Exp. State</string>
	<string name="if_status">Status</string>

	<string name="predefined_graphs_title">Predefined graphs</string>

	<string name="graph_title">History graph</string>
	<string name="graph_draw">Draw</string>
	<string name="graph_uncategorized">&lt;Uncategorized&gt;</string>

	<string name="last_values_title">Last values</string>
	<string name="last_values_na">N/A</string>
	<string name="last_values_pie_chart">Pie Chart</string>
	<string name="last_values_bar_chart">Bar Chart</string>
	<string name="last_values_graph_half_hour">Graph last half hour</string>
	<string name="last_values_graph_one_hour">Graph last hour</string>
	<string name="last_values_graph_two_hours">Graph last two hours</string>
	<string name="last_values_graph_four_hours">Graph last four hours</string>
	<string name="last_values_graph_one_day">Graph last day</string>
	<string name="last_values_graph_one_week">Graph last week</string>
	<string name="table_value_placeholder">&lt;&lt; TABLE &gt;&gt;</string>
	<string name="table_last_values">Table last values</string>

	<string name="connection_point_title">MAC address search</string>
	<string name="connection_point_hint_type_macaddress">Type or scan MAC address&#8230;</string>
	<string name="connection_point_invalid">MAC Address &quot;%1$s&quot; is invalid</string>
	<string name="connection_point_notfound">Connection point not found</string>
	<string name="connection_point_macaddress_notfound">Connection point for MAC address %1$s not found</string>
	<string name="connection_point_nodeid_notfound">Connection point for node %1$s not found</string>
	<string name="connection_point_info">Node%1$s with MAC address %2$s is connected to network switch %3$s on port %4$s</string>
	<string name="connection_point_delete_one">Delete item</string>
	<string name="connection_point_delete_all">Delete all items</string>
	<string name="connection_point_confirm_delete_one">Delete selected item?</string>
	<string name="connection_point_confirm_delete_all">Delete all items?</string>
	<string name="connection_point_scan">Scan</string>
	<string name="connection_point_find_switch_port">Find switch port</string>

	<string name="menu_poll">Poll</string>
	<string name="menu_poll_status">Status</string>
	<string name="menu_poll_configuration">Configuration</string>
	<string name="menu_poll_topology">Topology</string>
	<string name="menu_poll_interfaces">Interface names</string>

</resources>
