<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_status">
		<ListPreference android:dialogTitle="@string/pref_global_notification_status" android:key="global.notification.status" android:title="@string/pref_global_notification_status" android:entryValues="@array/notification_status_values" android:entries="@array/notification_status_labels" android:defaultValue="0" />
        <CheckBoxPreference android:summaryOff="@string/pref_global_notification_toast_disabled" android:summaryOn="@string/pref_global_notification_toast_enabled" android:key="global.notification.toast" android:enabled="true" android:defaultValue="true" android:title="@string/pref_global_notification_toast"/>
    	<CheckBoxPreference android:summaryOff="@string/pref_global_notification_icon_disabled" android:summaryOn="@string/pref_global_notification_icon_enabled" android:key="global.notification.icon" android:enabled="true" android:defaultValue="false" android:title="@string/pref_global_notification_icon"/>
	</PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_alarms">
	    <CheckBoxPreference android:key="global.notification.alarm" android:summaryOn="@string/pref_global_notification_alarm_enabled" android:summaryOff="@string/pref_global_notification_alarm_disabled" android:title="@string/pref_global_notification_alarm" android:enabled="true" android:defaultValue="true"/>
		<RingtonePreference android:title="@string/pref_alarm_sound_normal" android:ringtoneType="all" android:showDefault="true" android:showSilent="true" android:key="alarm.sound.normal" android:icon="@drawable/status_normal" />
		<RingtonePreference android:key="alarm.sound.warning" android:showDefault="true" android:showSilent="true" android:ringtoneType="all" android:title="@string/pref_alarm_sound_warning" android:icon="@drawable/status_warning" />
		<RingtonePreference android:key="alarm.sound.minor" android:showDefault="true" android:showSilent="true" android:ringtoneType="all" android:title="@string/pref_alarm_sound_minor" android:icon="@drawable/status_minor" />
		<RingtonePreference android:key="alarm.sound.major" android:showDefault="true" android:showSilent="true" android:ringtoneType="all" android:title="@string/pref_alarm_sound_major" android:icon="@drawable/status_major" />
		<RingtonePreference android:key="alarm.sound.critical" android:showDefault="true" android:showSilent="true" android:ringtoneType="all" android:title="@string/pref_alarm_sound_critical" android:icon="@drawable/status_critical" />
	</PreferenceCategory>
</PreferenceScreen>
